--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask==2.0.3
 requests==2.28.2
 wechatpy==2.0.0a26
-selectolax==0.3.10
+readability-lxml==0.8.1
 lxml==4.9.4
 werkzeug==2.0.3
 urllib3==1.26.15
